--- a/Scrum/sprint-1/uvgride/tsconfig.json
+++ b/Scrum/sprint-1/uvgride/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "allowImportingTsExtensions": true,
   },
   "extends": "expo/tsconfig.base"
 }
