--- a/Scrum/sprint-2/uvgride/docker-compose.yml
+++ b/Scrum/sprint-2/uvgride/docker-compose.yml
@@ -38,16 +38,18 @@ services:
       - frontend_node_modules:/app/node_modules
     environment:
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-      - REACT_NATIVE_PACKAGER_HOSTNAME=host.docker.internal
+      - REACT_NATIVE_PACKAGER_HOSTNAME=0.0.0.0
+      - API_URL=http://backend:3000
     restart: always
     command: >
       sh -c "if [ ! -d node_modules ]; then
-             npm install -g expo-cli &&
-             expo init -t blank . --non-interactive || true &&
-             npm install &&
-             sed -i 's/\"start\": \"expo start\"/\"start\": \"expo start --host 0.0.0.0\"/' package.json;
-             fi &&
-             npm start"
+           npm install -g expo-cli &&
+           expo init -t blank . --non-interactive || true &&
+           npm install &&
+           sed -i 's/\"start\": \"expo start\"/\"start\": \"expo start --host 0.0.0.0\"/' package.json;
+           fi &&
+           npm start"
+
 
   database:
     image: postgres:15-alpine
