--- a/Scrum/sprint-3/uvgride/frontend/package.json
+++ b/Scrum/sprint-3/uvgride/frontend/package.json
@@ -14,21 +14,21 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.9",
     "axios": "^1.8.4",
-    "expo": "~52.0.43",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-location": "~18.0.10"
+    "expo": "~53.0.0",
+    "expo-location": "~18.1.4",
+    "expo-status-bar": "~2.2.3",
+    "react": "^19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "@types/react-native-maps": "^0.24.1",
     "typescript": "^5.3.3"
