--- a/Scrum/sprint-3/uvgride/docker-compose.yml
+++ b/Scrum/sprint-3/uvgride/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build: ./backend
@@ -10,21 +8,12 @@ services:
       - database
     environment:
       - NODE_ENV=development
-      - DATABASE_URL=postgres://postgres:password@database:5432/uvgride-script
+      - DATABASE_URL=postgres://postgres:password@database:5432/uvgride
     volumes:
       - ./backend:/app
       - backend_node_modules:/app/node_modules
     restart: always
-    command: >
-      sh -c "if [ ! -f package.json ]; then
-             npm init -y && 
-             npm install express pg sequelize cors dotenv &&
-             npm install --save-dev nodemon &&
-             echo '{\n  \"scripts\": {\n    \"start\": \"nodemon src/index.js\"\n  }\n}' > package.json &&
-             mkdir -p src &&
-             echo 'const express = require(\"express\");\nconst app = express();\napp.use(express.json());\napp.get(\"/\", (req, res) => res.json({message: \"API funcionando\"}));\napp.listen(3000, () => console.log(\"Server running on port 3000\"));\n' > src/index.js;
-             fi && 
-             npm start"
+    command: npm start
 
   frontend:
     build: ./frontend
@@ -33,36 +22,29 @@ services:
       - "19000:19000"
       - "19001:19001"
       - "19002:19002"
+    depends_on:
+      - backend
     volumes:
       - ./frontend:/app
       - frontend_node_modules:/app/node_modules
     environment:
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
       - REACT_NATIVE_PACKAGER_HOSTNAME=0.0.0.0
-      - API_URL=http://backend:3000
     restart: always
-    command: >
-      sh -c "if [ ! -d node_modules ]; then
-           npm install -g expo-cli &&
-           expo init -t blank . --non-interactive || true &&
-           npm install &&
-           sed -i 's/\"start\": \"expo start\"/\"start\": \"expo start --host 0.0.0.0\"/' package.json;
-           fi &&
-           npm start"
-
+    command: npm start
 
   database:
     image: postgres:15-alpine
     container_name: uvgride-database
     ports:
-      - "5432:5432"
+      - "15432:5432"  # Cambiado para no chocar con postgres local
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=uvgride-script
+      - POSTGRES_DB=uvgride
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./database/02-uvgride-script.sql:/docker-entrypoint-initdb.d/02-uvgride-script.sql
     restart: always
 
   pgadmin:
