--- a/Scrum/sprint-3/uvgride/frontend/Dockerfile
+++ b/Scrum/sprint-3/uvgride/frontend/Dockerfile
@@ -4,12 +4,15 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm ci && npm install -g @expo/ngrok
 
 COPY . .
+
+ENV EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
 
 EXPOSE 19000
 EXPOSE 19001
 EXPOSE 19002
+EXPOSE 8081
 
 CMD ["npm", "start"]
