--- a/Scrum/sprint-3/uvgride/backend/package.json
+++ b/Scrum/sprint-3/uvgride/backend/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.15.6",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
+    "wait-on": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
   }
-  
 }
