--- a/Scrum/sprint-3/uvgride/docker-compose.yml
+++ b/Scrum/sprint-3/uvgride/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     command: sh -c "npx wait-on tcp:database:5432 && npm start"
     volumes:
     - ./backend:/app
+    - backend_node_modules:/app/node_modules
     restart: always
 
   frontend:
@@ -32,7 +33,7 @@ services:
       - frontend_node_modules:/app/node_modules
     environment:
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-      - REACT_NATIVE_PACKAGER_HOSTNAME=0.0.0.0
+      - REACT_NATIVE_PACKAGER_HOSTNAME=190.56.194.12
     restart: always
     command: npm start
 
