--- a/Scrum/sprint-3/uvgride/docker-compose.yml
+++ b/Scrum/sprint-3/uvgride/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - frontend_node_modules:/app/node_modules
     environment:
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-      - REACT_NATIVE_PACKAGER_HOSTNAME=190.56.194.12
+      - REACT_NATIVE_PACKAGER_HOSTNAME=190.56.194.12 # <-- colocar ip local
     restart: always
     command: npm start
 
