--- a/Scrum/sprint-3/uvgride/docker-compose.yml
+++ b/Scrum/sprint-3/uvgride/docker-compose.yml
@@ -1,47 +1,31 @@
+version: '3.8'
+
 services:
   backend:
     build: ./backend
     container_name: uvgride-backend
     ports:
-    - "3001:3001"
+      - "3001:3001"
     depends_on:
-    - database
+      - database
     environment:
-    - NODE_ENV=development
-    - DB_NAME=uvgride
-    - DB_USER=postgres
-    - DB_PASSWORD=password
-    - DB_HOST=database
-    - DB_PORT=5432
+      - NODE_ENV=development
+      - DB_NAME=uvgride
+      - DB_USER=postgres
+      - DB_PASSWORD=password
+      - DB_HOST=database
+      - DB_PORT=5432
     command: sh -c "npx wait-on tcp:database:5432 && npm start"
     volumes:
-    - ./backend:/app
-    - backend_node_modules:/app/node_modules
+      - ./backend:/app
+      - backend_node_modules:/app/node_modules
     restart: always
-
-  frontend:
-    build: ./frontend
-    container_name: uvgride-frontend
-    ports:
-      - "19000:19000"
-      - "19001:19001"
-      - "19002:19002"
-    depends_on:
-      - backend
-    volumes:
-      - ./frontend:/app
-      - frontend_node_modules:/app/node_modules
-    environment:
-      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-      - REACT_NATIVE_PACKAGER_HOSTNAME=190.56.194.12 # <-- colocar ip local
-    restart: always
-    command: npm start
 
   database:
     image: postgres:15-alpine
     container_name: uvgride-database
     ports:
-      - "15432:5432"  # Cambiado para no chocar con postgres local
+      - "15432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
@@ -66,4 +50,3 @@ services:
 volumes:
   postgres_data:
   backend_node_modules:
-  frontend_node_modules:
