--- a/Scrum/sprint-4/uvgride/frontend/package.json
+++ b/Scrum/sprint-4/uvgride/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.9",
+    "@rnmapbox/maps": "^10.1.38",
     "axios": "^1.8.4",
     "expo": "~53.0.0",
     "expo-location": "~18.1.4",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "@types/react-native-maps": "^0.24.1",
