--- a/Scrum/sprint-4/uvgride/backend/package.json
+++ b/Scrum/sprint-4/uvgride/backend/package.json
@@ -20,7 +20,9 @@
     "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
-    "wait-on": "^8.0.3"
+    "wait-on": "^8.0.3",
+    "multer": "^1.4.5-lts.1", 
+  "fs-extra": "^11.1.1"     
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
