--- a/Scrum/sprints/uvgride/frontend/package.json
+++ b/Scrum/sprints/uvgride/frontend/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.7",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.9",
@@ -20,6 +21,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
     "react-native": "0.79.2",
+    "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
