--- a/Scrum/sprints/uvgride/frontend/package.json
+++ b/Scrum/sprints/uvgride/frontend/package.json
@@ -7,7 +7,8 @@
     "start": "expo start -- --lan",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/slider": "^4.5.7",
