--- a/Scrum/sprints/uvgride/frontend/package.json
+++ b/Scrum/sprints/uvgride/frontend/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.3",
     "@react-native-community/slider": "^4.5.7",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
