--- a/Scrum/sprints/uvgride/frontend/package.json
+++ b/Scrum/sprints/uvgride/frontend/package.json
@@ -15,11 +15,12 @@
     "@react-native-community/slider": "^4.5.7",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.9",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
     "@rnmapbox/maps": "^10.1.38",
     "axios": "^1.8.4",
     "expo": "~53.0.0",
+    "expo-linear-gradient": "^14.1.5",
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
@@ -29,7 +30,7 @@
     "react-native-maps": "1.20.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0"
   },
