--- a/Scrum/sprints/uvgride/docker-compose.yml
+++ b/Scrum/sprints/uvgride/docker-compose.yml
@@ -22,6 +22,22 @@ services:
       - backend_node_modules:/app/node_modules
     restart: always
 
+  frontend:
+    build: ./frontend
+    container_name: uvgride-frontend
+    ports:
+      - "19000:19000"
+      - "19001:19001"
+      - "19002:19002"
+      - "8081:8081"
+    volumes:
+      - ./frontend:/app
+      - frontend_node_modules:/app/node_modules
+    environment:
+      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
+    command: npx expo start --tunnel
+    restart: always
+
   database:
     image: postgres:15-alpine
     container_name: uvgride-database
@@ -51,3 +67,4 @@ services:
 volumes:
   postgres_data:
   backend_node_modules:
+  frontend_node_modules:
