--- a/Scrum/sprints/uvgride/package.json
+++ b/Scrum/sprints/uvgride/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@rnmapbox/maps": "^10.1.40",
     "react-native-color-picker": "^0.6.0",
     "react-native-dotenv": "^3.4.11"
