--- a/Scrum/sprints/uvgride/backend/package.json
+++ b/Scrum/sprints/uvgride/backend/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "stress": "node test/stress/backend-stress.js"
   },
   "keywords": [],
   "author": "",
