--- a/Scrum/sprints/uvgride/frontend/package.json
+++ b/Scrum/sprints/uvgride/frontend/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "stress:web": "node test/stress/frontend_stress.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
