--- a/Scrum/sprints/uvgride/backend/package.json
+++ b/Scrum/sprints/uvgride/backend/package.json
@@ -2,31 +2,30 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
-    "test": "jest",
-    "stress": "node test/stress/backend-stress.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "description": "",
+  "license": "ISC",
+  "scripts": {
+  "dev": "nodemon src/server.js",
+  "start": "node src/server.js",
+  "test": "jest --runInBand",
+  "stress": "node test/stress/backend-stress.js",
+  "test:unit": "jest --runInBand --verbose --testMatch \"**/*.unit.test.js\""
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "wait-on": "^8.0.3",
-    "multer": "^1.4.5-lts.1", 
-  "fs-extra": "^11.1.1"     
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   }
 }
