--- a/Scrum/sprints/uvgride/backend/package.json
+++ b/Scrum/sprints/uvgride/backend/package.json
@@ -5,24 +5,24 @@
   "description": "",
   "license": "ISC",
   "scripts": {
-  "dev": "nodemon src/server.js",
-  "start": "node src/server.js",
-  "test": "jest --runInBand",
-  "stress": "node test/stress/backend-stress.js",
-  "test:unit": "jest --runInBand --verbose --testMatch \"**/*.unit.test.js\""
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "test": "jest --runInBand",
+    "stress": "node test/stress/backend-stress.js",
+    "test:unit": "jest --runInBand --verbose --testMatch \"**/*.unit.test.js\""
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
-    "wait-on": "^8.0.3",
-    "fs-extra": "^11.1.1"
+    "wait-on": "^8.0.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
