--- a/Scrum/sprints/uvgride/docker-compose.yml
+++ b/Scrum/sprints/uvgride/docker-compose.yml
@@ -22,24 +22,24 @@ services:
     restart: always
 
 
-  frontend:
-    build: ./frontend
-    container_name: uvgride-frontend
-    ports:
-      - "19000:19000"
-      - "19001:19001"
-      - "19002:19002"
-      - "8081:8081"
-    environment:
-      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-      - REACT_NATIVE_PACKAGER_HOSTNAME=localhost
-    command: npx expo start --tunnel
-    volumes:
-      - ./frontend:/app
-      - frontend_node_modules:/app/node_modules
-    depends_on:
-      - backend
-    restart: always
+  # frontend:
+  #   build: ./frontend
+  #   container_name: uvgride-frontend
+  #   ports:
+  #     - "19000:19000"
+  #     - "19001:19001"
+  #     - "19002:19002"
+  #     - "8081:8081"
+  #   environment:
+  #     - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
+  #     - REACT_NATIVE_PACKAGER_HOSTNAME=localhost
+  #   command: npx expo start --tunnel
+  #   volumes:
+  #     - ./frontend:/app
+  #     - frontend_node_modules:/app/node_modules
+  #   depends_on:
+  #     - backend
+  #   restart: always
 
 
   database:
