--- a/Scrum/sprints/uvgride/frontend/package.json
+++ b/Scrum/sprints/uvgride/frontend/package.json
@@ -13,37 +13,37 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.3",
-    "@react-native-community/slider": "^4.5.7",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/slider": "5.0.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@rnmapbox/maps": "^10.1.38",
     "axios": "^1.8.4",
-    "expo": "~53.0.0",
-    "expo-linear-gradient": "^14.1.5",
-    "expo-location": "~18.1.6",
-    "expo-status-bar": "~2.2.3",
-    "react": "^19.0.0",
-    "react-native": "0.79.2",
+    "expo": "^54.0.21",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-location": "~19.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-color-picker": "^0.6.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.2.0",
-    "expo-image-picker": "~16.1.4"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@react-native-community/cli": "^18.0.0",
-    "@types/react": "~19.0.10",
-    "@types/react-native": "^0.72.8",
+    "@expo/cli": "^54.0.14",
+    "@types/react": "19.1.12",
     "@types/react-native-maps": "^0.24.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
